--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.38.0
-pandas==2.2.2
-google-generativeai==0.8.3
-google-api-python-client==2.20.0
-requests==2.32.3
+streamlit
+pandas
+google-api-python-client
+google-generativeai
+requests
